--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,9 @@
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
+    },
+     ﻿{
+    "ConnectionStrings": {
+        "WebApiDatabase": "Data Source=LocalDatabase.db"
     }
 }
