--- a/WebApi.csproj
+++ b/WebApi.csproj
@@ -22,4 +22,8 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.1" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="LocalDatabase.db" />  
+  </ItemGroup>
 </Project>
